@@ -139,12 +139,15 @@ The following flags are specific to Kyua's 'configure' script:
 
 * --enable-developer
   Possible values: yes, no
-  Default: Depends on the version number.  Stable versions define this
-  to 'no' while all others have it set to 'yes'.
+  Default: 'yes' in svn HEAD builds; 'no' in formal releases.
 
   Enables several features useful for development, such as the inclusion
-  of debugging symbols in all objects or the enabling of warnings during
-  compilation.
+  of debugging symbols in all objects or the enforcement of compilation
+  warnings.
+
+  The compiler will be executed with an exhaustive collection of warning
+  detection features regardless of the value of this flag.  However, such
+  warnings are only fatal when --enable-developer is 'yes'.
 
 * --with-doxygen
   Possible values: yes, no, auto or a path.
